DocWorks for ecom-payment-settings - 1 change detected, but 13 issue detected changes: Service ecom-payment-settings operation getPaymentSettings.examples[1] has changed body
issues:
Operation getPaymentSettings has an unknown param type payment-settings.Options (payment-settings-spi.js (38))
Message Options has an unknown property type payment-settings.Order (payment-settings-spi.js (62))
Message PaymentSettingsResponse has an unknown property type payment-settings.PaymentSettings (payment-settings-spi.js (68))
Browserslist: caniuse-lite is outdated. Please run:
  npx browserslist@latest --update-db
  Why you should do it regularly: https://github.com/browserslist/browserslist#browsers-data-updating
ERROR: The @snippet tag - file 'velo-docs/examples/Stores-backend-Orders-createOrderFull.es6' not found. File: payment-settings-spi.js line: 429
ERROR: The @snippet tag - file 'velo-docs/examples/Stores-backend-Orders-createOrderFull.es6' not found. File: payment-settings-spi.js line: 445
ERROR: The @snippet tag - file 'velo-docs/examples/Stores-backend-Orders-createOrderFull.es6' not found. File: payment-settings-spi.js line: 457
ERROR: The @snippet tag - file 'velo-docs/examples/Stores-backend-Orders-createOrderFull.es6' not found. File: payment-settings-spi.js line: 466
ERROR: The @snippet tag - file 'velo-docs/examples/Stores-backend-Orders-createOrderFull.es6' not found. File: payment-settings-spi.js line: 475
ERROR: The @snippet tag - file 'velo-docs/examples/Stores-backend-Orders-createOrderFull.es6' not found. File: payment-settings-spi.js line: 483
ERROR: The @snippet tag - file 'velo-docs/examples/Stores-backend-Orders-createOrderFull.es6' not found. File: payment-settings-spi.js line: 518
ERROR: The @snippet tag - file 'velo-docs/examples/Stores-backend-Orders-createOrderFull.es6' not found. File: payment-settings-spi.js line: 531
ERROR: The @snippet tag - file 'velo-docs/examples/Stores-backend-Orders-createOrderFull.es6' not found. File: payment-settings-s 

--- a/ecom-payment-settings/ecom-payment-settings.service.json
+++ b/ecom-payment-settings/ecom-payment-settings.service.json
@@ -94,7 +94,8 @@
           { "customLabels":
               [ { "id": "maturity-beta" } ] } },
       { "name": "getPaymentSettings",
-        "labels": [],
+        "labels":
+          [ "changed" ],
         "nameParams": [],
         "params":
           [ { "name": "options",
@@ -141,13 +142,22 @@
                   "body":
                     [ "export const getPaymentSettings = async (options) => {",
                       "  return {",
-                      "      paymentSettings: {",
-                      "          // Extract the subtotal price from the order, convert it to a number and check if the price is equal or greater than $50.",
-                      "          // If so, `requires3dSecure sets to `true` and 3DS is required for the order.",
-                      "          requires3dSecure: parseFloat(options.order.priceSummary.subtotal.amount) >= 50",
-                      "      }",
+                      "    paymentSettings: {",
+                      "      // Extract the subtotal price from the order, convert it to a number ",
+                      "      // and check if the price is equal or greater than $50.",
+                      "      requires3dSecure: parseFloat(options.order.priceSummary.subtotal.amount) >= 50",
+                      "    }",
                       "  };",
-                      "};" ],
+                      "};",
+                      "",
+                      "/* If the subtotal price is less than 50, the following payment settings are returned:",
+                      " *",
+                      " * {",
+                      " *   \"paymentSettings\": {",
+                      " *     \"requires3dSecure\": \"false\"",
+                      " *   }",
+                      " * }",
+                      " */" ],
                   "extra":
                     {  } } ],
             "extra":
