DocWorks for ecom-payment-settings - no significant changes detected, but 13 issue detected
issues:
Operation getPaymentSettings has an unknown param type payment-settings.Options (payment-settings-spi.js (38))
Message Options has an unknown property type payment-settings.Order (payment-settings-spi.js (62))
Message PaymentSettingsResponse has an unknown property type payment-settings.PaymentSettings (payment-settings-spi.js (68))
Browserslist: caniuse-lite is outdated. Please run:
  npx browserslist@latest --update-db
  Why you should do it regularly: https://github.com/browserslist/browserslist#browsers-data-updating
ERROR: The @snippet tag - file 'velo-docs/examples/Stores-backend-Orders-createOrderFull.es6' not found. File: payment-settings-spi.js line: 429
ERROR: The @snippet tag - file 'velo-docs/examples/Stores-backend-Orders-createOrderFull.es6' not found. File: payment-settings-spi.js line: 445
ERROR: The @snippet tag - file 'velo-docs/examples/Stores-backend-Orders-createOrderFull.es6' not found. File: payment-settings-spi.js line: 457
ERROR: The @snippet tag - file 'velo-docs/examples/Stores-backend-Orders-createOrderFull.es6' not found. File: payment-settings-spi.js line: 466
ERROR: The @snippet tag - file 'velo-docs/examples/Stores-backend-Orders-createOrderFull.es6' not found. File: payment-settings-spi.js line: 475
ERROR: The @snippet tag - file 'velo-docs/examples/Stores-backend-Orders-createOrderFull.es6' not found. File: payment-settings-spi.js line: 483
ERROR: The @snippet tag - file 'velo-docs/examples/Stores-backend-Orders-createOrderFull.es6' not found. File: payment-settings-spi.js line: 518
ERROR: The @snippet tag - file 'velo-docs/examples/Stores-backend-Orders-createOrderFull.es6' not found. File: payment-settings-spi.js line: 531
ERROR: The @snippet tag - file 'velo-docs/examples/Stores-backend-Orders-createOrderFull.es6' not found. File: payment-settings-spi.js line: 540

--- a/ecom-payment-settings/ecom-payment-settings.service.json
+++ b/ecom-payment-settings/ecom-payment-settings.service.json
@@ -1,7 +1,6 @@
 { "name": "ecom-payment-settings",
   "mixes": [],
-  "labels":
-    [ "changed" ],
+  "labels": [],
   "location":
     { "lineno": 1,
       "filename": "payment-settings-spi-index.js" },
@@ -94,8 +93,7 @@
           { "customLabels":
               [ { "id": "maturity-beta" } ] } },
       { "name": "getPaymentSettings",
-        "labels":
-          [ "changed" ],
+        "labels": [],
         "nameParams": [],
         "params":
           [ { "name": "options",
