DocWorks for ecom-payment-settings - 1 change detected, but 12 issue detected changes: Service ecom-payment-settings message PaymentSettingsResponse member paymentSettings has changed type
issues:
Operation getPaymentSettings has an unknown param type payment-settings.Options (payment-settings-spi.js (38))
Message Options has an unknown property type payment-settings.Order (payment-settings-spi.js (62))
Browserslist: caniuse-lite is outdated. Please run:
  npx browserslist@latest --update-db
  Why you should do it regularly: https://github.com/browserslist/browserslist#browsers-data-updating
ERROR: The @snippet tag - file 'velo-docs/examples/Stores-backend-Orders-createOrderFull.es6' not found. File: payment-settings-spi.js line: 429
ERROR: The @snippet tag - file 'velo-docs/examples/Stores-backend-Orders-createOrderFull.es6' not found. File: payment-settings-spi.js line: 445
ERROR: The @snippet tag - file 'velo-docs/examples/Stores-backend-Orders-createOrderFull.es6' not found. File: payment-settings-spi.js line: 457
ERROR: The @snippet tag - file 'velo-docs/examples/Stores-backend-Orders-createOrderFull.es6' not found. File: payment-settings-spi.js line: 466
ERROR: The @snippet tag - file 'velo-docs/examples/Stores-backend-Orders-createOrderFull.es6' not found. File: payment-settings-spi.js line: 475
ERROR: The @snippet tag - file 'velo-docs/examples/Stores-backend-Orders-createOrderFull.es6' not found. File: payment-settings-spi.js line: 483
ERROR: The @snippet tag - file 'velo-docs/examples/Stores-backend-Orders-createOrderFull.es6' not found. File: payment-settings-spi.js line: 518
ERROR: The @snippet tag - file 'velo-docs/examples/Stores-backend-Orders-createOrderFull.es6' not found. File: payment-settings-spi.js line: 531
ERROR: The @snippet tag - file 'velo-docs/examples/Stores-backend-Orders-createOrderFull.es6' not found. File: payment-settings-spi.js line: 540

--- a/ecom-payment-settings/ecom-payment-settings.service.json
+++ b/ecom-payment-settings/ecom-payment-settings.service.json
@@ -1,6 +1,7 @@
 { "name": "ecom-payment-settings",
   "mixes": [],
-  "labels": [],
+  "labels":
+    [ "changed" ],
   "location":
     { "lineno": 1,
       "filename": "payment-settings-spi-index.js" },
@@ -197,7 +198,7 @@
         "extra":
           {  },
         "labels":
-          [ "removed" ] },
+          [ "new" ] },
       { "name": "PaymentSettingsConfigResponse",
         "locations":
           [ { "lineno": 31,
@@ -225,10 +226,11 @@
               {  } },
         "members":
           [ { "name": "paymentSettings",
-              "type": "payment-settings.PaymentSettings",
+              "type": "ecom-payment-settings.PaymentSettings",
               "doc": "Retrieved payment settings." } ],
         "extra":
           {  },
-        "labels": [] } ],
+        "labels":
+          [ "changed" ] } ],
   "extra":
     {  } }
