DocWorks for ecom-payment-settings - 3 changes detected, but 21 issue detected changes: Service ecom-payment-settings operation getPaymentSettings has changed param options type Service ecom-payment-settings message Options member order has changed type Service ecom-payment-settings has a new message Order
issues:
Message Order has an unknown property type payment-settings.BuyerInfo (payment-settings-spi.js (80))
Message Order has an unknown property type payment-settings.PriceSummary (payment-settings-spi.js (80))
Message Order has an unknown property type payment-settings.BillingInfo (payment-settings-spi.js (80))
Message Order has an unknown property type payment-settings.OrderShippingInfo (payment-settings-spi.js (80))
Message Order has an unknown property type payment-settings.TaxSummary (payment-settings-spi.js (80))
Message Order has an unknown property type payment-settings.AppliedDiscounts (payment-settings-spi.js (80))
Message Order has an unknown property type payment-settings.Activities (payment-settings-spi.js (80))
Message Order has an unknown property type payment-settings.CreatedBy (payment-settings-spi.js (80))
Message Order has an unknown property type payment-settings.ChannelInfo (payment-settings-spi.js (80))
Message Order has an unknown property type payment-settings.CustomFields (payment-settings-spi.js (80))
Message Order has an unknown property type payment-settings.AdditionalFees (payment-settings-spi.js (80))
Browserslist: caniuse-lite is outdated. Please run:
  npx browserslist@latest --update-db
  Why you should do it regularly: https://github.com/browserslist/browserslist#browsers-data-updating
ERROR: The @snippet tag - file 'velo-docs/examples/Stores-backend-Orders-createOrderFull.es6' not found. File: payment-settings-spi.js line: 429
ERROR: The @snippet tag - file 'velo-docs/examples/Stores-backend-Orders-createOrderFull.es6' not found. File: payment-settings-spi.js line: 445
ERROR: The @snippet tag - file 'velo-docs/examples/Stores- 

--- a/ecom-payment-settings/ecom-payment-settings.service.json
+++ b/ecom-payment-settings/ecom-payment-settings.service.json
@@ -94,11 +94,12 @@
           { "customLabels":
               [ { "id": "maturity-beta" } ] } },
       { "name": "getPaymentSettings",
-        "labels": [],
+        "labels":
+          [ "changed" ],
         "nameParams": [],
         "params":
           [ { "name": "options",
-              "type": "payment-settings.Options",
+              "type": "ecom-payment-settings.Options",
               "doc": "The order information." } ],
         "ret":
           { "type":
@@ -177,11 +178,162 @@
               {  } },
         "members":
           [ { "name": "order",
-              "type": "payment-settings.Order",
+              "type": "ecom-payment-settings.Order",
               "doc": "Order information." } ],
         "extra":
           {  },
-        "labels": [] },
+        "labels":
+          [ "changed" ] },
+      { "name": "Order",
+        "locations":
+          [ { "lineno": 80,
+              "filename": "payment-settings-spi.js" } ],
+        "docs":
+          { "summary": "An object representing an order.",
+            "links": [],
+            "examples": [],
+            "extra":
+              {  } },
+        "members":
+          [ { "name": "_id",
+              "type": "string",
+              "doc": "Order ID.",
+              "optional": true },
+            { "name": "number",
+              "type": "number",
+              "doc": "Order number displayed in the site owner's dashboard (auto-generated).",
+              "optional": true },
+            { "name": "_createdDate",
+              "type": "string",
+              "doc": "Date and time the order was created in [ISO-8601](https://en.wikipedia.org/wiki/ISO_8601#combined_date_and_time_representations) format.",
+              "optional": true },
+            { "name": "_updatedDate",
+              "type": "string",
+              "doc": "Date and time the order was updated in [ISO-8601](https://en.wikipedia.org/wiki/ISO_8601#combined_date_and_time_representations) format.",
+              "optional": true },
+            { "name": "lineItems",
+              "type":
+                { "name": "Array",
+                  "typeParams":
+                    [ "payment-settings.OrderLineItem" ] },
+              "doc": "Order line items.",
+              "optional": true },
+            { "name": "buyerInfo",
+              "type": "payment-settings.BuyerInfo",
+              "doc": "Buyer information.",
+              "optional": true },
+            { "name": "paymentStatus",
+              "type": "string",
+              "doc": "Order payment status.\n\nOne of:\n\n + `NOT_PAID`: This can be an order made online, but not yet paid. In such cases `order.status` will be `INITIALIZED`. This status also applies when an offline order needs to be manually marked as paid. In such cases `order.status` will be `APPROVED`.\n + `PAID`: All payments associated with this order are paid.\n + `PARTIALLY_REFUNDED`: Order was refunded, but refund amount is less than order total price.\n + `FULLY_REFUNDED`: Order fully refunded. Refund amount equals total price.\n + `PENDING`: Payments received but not yet confirmed by the payment provider.\n + `PARTIALLY_PAID`: At least one payment was received and approved, covering less than total price amount.",
+              "optional": true },
+            { "name": "fulfillmentStatus",
+              "type": "string",
+              "doc": "Order fulfillment status.\n\nOne of:\n\n + `NOT_FULFILLED`: Order is not yet fulfilled.\n + `FULFILLED`: Order was fulfilled successfully.\n + `PARTIALLY_FULFILLED`: Order was partially fulfilled. For example, when only some of the order's items were fulfilled.",
+              "optional": true },
+            { "name": "buyerLanguage",
+              "type": "string",
+              "doc": "Language for communication with the buyer. Defaults to the site language. For a site that supports multiple languages, this is the language the buyer selected.",
+              "optional": true },
+            { "name": "weightUnit",
+              "type": "string",
+              "doc": "Weight measurement unit - defaults to site's weight unit.\n\nOne of: `UNSPECIFIED_WEIGHT_UNIT`, `KG`, `LB`",
+              "optional": true },
+            { "name": "currency",
+              "type": "string",
+              "doc": "Currency used for the pricing of this order in [ISO-4217](https://en.wikipedia.org/wiki/ISO_4217#list_of_ISO_4217_currency_codes) format.",
+              "optional": true },
+            { "name": "taxIncludedInPrices",
+              "type": "boolean",
+              "doc": "Whether tax is included in line item prices.",
+              "optional": true },
+            { "name": "siteLanguage",
+              "type": "string",
+              "doc": "Site language in which original values are shown.",
+              "optional": true },
+            { "name": "priceSummary",
+              "type": "payment-settings.PriceSummary",
+              "doc": "Order price summary.",
+              "optional": true },
+            { "name": "billingInfo",
+              "type": "payment-settings.BillingInfo",
+              "doc": "Billing address and contact details.",
+              "optional": true },
+            { "name": "shippingInfo",
+              "type": "payment-settings.OrderShippingInfo",
+              "doc": "Shipping information.",
+              "optional": true },
+            { "name": "buyerNote",
+              "type": "string",
+              "doc": "[Buyer note](https://support.wix.com/en/article/wix-stores-viewing-buyer-notes) left by the customer.",
+              "optional": true },
+            { "name": "status",
+              "type": "string",
+              "doc": "Order status.\n\nOne of:\n\n + `INITIALIZED`: Order was created, but not yet approved or declined.\n + `APPROVED`: Order was approved. This happens when either the online payment succeeded or the order is an offline order. Once an order is approved, many side effects are triggered. For example, holding of stock in the inventory and sending of notification emails.\n + `CANCELED`: Order was canceled by the user.",
+              "optional": true },
+            { "name": "archived",
+              "type": "boolean",
+              "doc": "Whether order is archived.",
+              "optional": true },
+            { "name": "taxSummary",
+              "type": "payment-settings.TaxSummary",
+              "doc": "Tax summary.",
+              "optional": true },
+            { "name": "appliedDiscounts",
+              "type":
+                { "name": "Array",
+                  "typeParams":
+                    [ "payment-settings.AppliedDiscounts" ] },
+              "doc": "Applied discounts.",
+              "optional": true },
+            { "name": "activities",
+              "type":
+                { "name": "Array",
+                  "typeParams":
+                    [ "payment-settings.Activities" ] },
+              "doc": "Log of updates related to the order.",
+              "optional": true },
+            { "name": "attributionSource",
+              "type": "string",
+              "doc": "Order attribution source.\n\nOne of: `UNSPECIFIED`, `FACEBOOK_ADS`",
+              "optional": true },
+            { "name": "createdBy",
+              "type": "payment-settings.CreatedBy",
+              "doc": "ID of the order's initiator.",
+              "optional": true },
+            { "name": "channelInfo",
+              "type": "payment-settings.ChannelInfo",
+              "doc": "Information about the sales channel that submitted this order.",
+              "optional": true },
+            { "name": "seenByAHuman",
+              "type": "boolean",
+              "doc": "Whether a human has seen the order. Set when an order is clicked on in the Business Manager.",
+              "optional": true },
+            { "name": "checkoutId",
+              "type": "string",
+              "doc": "Checkout ID.",
+              "optional": true },
+            { "name": "customFields",
+              "type":
+                { "name": "Array",
+                  "typeParams":
+                    [ "payment-settings.CustomFields" ] },
+              "doc": "Custom fields.",
+              "optional": true },
+            { "name": "additionalFees",
+              "type":
+                { "name": "Array",
+                  "typeParams":
+                    [ "payment-settings.AdditionalFees" ] },
+              "doc": "Additional fees applied to the order.",
+              "optional": true },
+            { "name": "purchaseFlowId",
+              "type": "string",
+              "doc": "Persistent ID that correlates between the various eCommerce elements: cart, checkout, and order.",
+              "optional": true } ],
+        "extra":
+          {  },
+        "labels":
+          [ "new" ] },
       { "name": "PaymentSettings",
         "locations":
           [ { "lineno": 74,
@@ -197,8 +349,7 @@
               "doc": "Whether to apply [3D Secure](https://support.wix.com/en/article/about-3d-secure-3ds-payments-with-third-party-payment-providers) during the payment process." } ],
         "extra":
           {  },
-        "labels":
-          [ "new" ] },
+        "labels": [] },
       { "name": "PaymentSettingsConfigResponse",
         "locations":
           [ { "lineno": 31,
@@ -230,7 +381,6 @@
               "doc": "Retrieved payment settings." } ],
         "extra":
           {  },
-        "labels":
-          [ "changed" ] } ],
+        "labels": [] } ],
   "extra":
     {  } }
