--- a/ecom-payment-settings/ecom-payment-settings.service.json
+++ b/ecom-payment-settings/ecom-payment-settings.service.json
@@ -44,7 +44,8 @@
   "properties": [],
   "operations":
     [ { "name": "getConfig",
-        "labels": [],
+        "labels":
+          [ "changed" ],
         "nameParams": [],
         "params":
           [ { "name": "fallbackValueForRequires3dSecure",
@@ -66,7 +67,7 @@
                 "it automatically adds a folder to your site. This file contains 2 files, **<your-extension-name>-config.js** and ",
                 "**<your-extension-name>.js**.",
                 "",
-                "The first of these files, **<your-extension-name>-config.js**, is used to set any default configurations for your implementation of the custom extension.",
+                "Use the first of these files, **<your-extension-name>-config.js**, to set any default configurations for your implementation of the custom extension.",
                 "",
                 "For the payment settings extension, the available default is to set a fallback value for whether to require ",
                 "3DS to an order payment if the [`getPaymentSettings()`](https://www.wix.com/velo/reference/spis/ecom-payment-settings/getpaymentsettings) ",
@@ -117,9 +118,9 @@
                 "it automatically adds a folder to your site. This file contains 2 files, **<your-extension-name>-config.js** and ",
                 "**<your-extension-name>.js**.",
                 "",
-                "The second of these files, **<your-extension-name>.js**, is used to write the code to determine which payment settings to apply to an order. ",
+                "Use the second of these files, **<your-extension-name>.js**, to write the code to determine which payment settings to apply to an order. ",
                 "Currently, the only payment setting available to customize is whether to apply [3 domain security](https://support.wix.com/en/article/about-3d-secure-3ds-payments-with-third-party-payment-providers) (3DS) ",
-                "to an order. If the code fails, then `requires3dSecure` will be set to the value for `fallbackValueForRequires3dSecure` set in ",
+                "to an order. Note that if the code fails then `requires3dSecure` sets to the value for `fallbackValueForRequires3dSecure` set in ",
                 "[`getConfig()`](https://www.wix.com/velo/reference/spis/ecom-payment-settings/getconfig).",
                 "",
                 "See [Tutorial: Payment Settings Custom Extension](https://support.wix.com/en/article/tutorial-payment-settings-custom-extension) ",
@@ -182,8 +183,7 @@
               "doc": "Order information." } ],
         "extra":
           {  },
-        "labels":
-          [ "changed" ] },
+        "labels": [] },
       { "name": "Order",
         "locations":
           [ { "lineno": 80,
@@ -332,8 +332,7 @@
               "optional": true } ],
         "extra":
           {  },
-        "labels":
-          [ "new" ] },
+        "labels": [] },
       { "name": "PaymentSettings",
         "locations":
           [ { "lineno": 74,
