DocWorks for ecom-payment-settings - no significant changes detected, but 12 issue detected
issues:
Message Order has an unknown property type payment-settings.BuyerInfo (payment-settings-spi.js (80))
Message Order has an unknown property type payment-settings.PriceSummary (payment-settings-spi.js (80))
Message Order has an unknown property type payment-settings.BillingInfo (payment-settings-spi.js (80))
Message Order has an unknown property type payment-settings.OrderShippingInfo (payment-settings-spi.js (80))
Message Order has an unknown property type payment-settings.TaxSummary (payment-settings-spi.js (80))
Message Order has an unknown property type payment-settings.AppliedDiscounts (payment-settings-spi.js (80))
Message Order has an unknown property type payment-settings.Activities (payment-settings-spi.js (80))
Message Order has an unknown property type payment-settings.CreatedBy (payment-settings-spi.js (80))
Message Order has an unknown property type payment-settings.ChannelInfo (payment-settings-spi.js (80))
Message Order has an unknown property type payment-settings.CustomFields (payment-settings-spi.js (80))
Message Order has an unknown property type payment-settings.AdditionalFees (payment-settings-spi.js (80))
Browserslist: caniuse-lite is outdated. Please run:
  npx browserslist@latest --update-db
  Why you should do it regularly: https://github.com/browserslist/browserslist#browsers-data-updating

--- a/ecom-payment-settings/ecom-payment-settings.service.json
+++ b/ecom-payment-settings/ecom-payment-settings.service.json
@@ -1,7 +1,6 @@
 { "name": "ecom-payment-settings",
   "mixes": [],
-  "labels":
-    [ "changed" ],
+  "labels": [],
   "location":
     { "lineno": 1,
       "filename": "payment-settings-spi-index.js" },
@@ -44,8 +43,7 @@
   "properties": [],
   "operations":
     [ { "name": "getConfig",
-        "labels":
-          [ "changed" ],
+        "labels": [],
         "nameParams": [],
         "params":
           [ { "name": "fallbackValueForRequires3dSecure",
@@ -95,8 +93,7 @@
           { "customLabels":
               [ { "id": "maturity-beta" } ] } },
       { "name": "getPaymentSettings",
-        "labels":
-          [ "changed" ],
+        "labels": [],
         "nameParams": [],
         "params":
           [ { "name": "options",
